fixed header spacing for mobile

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ body {
 
 header {
   position: relative;
-  left: 10%;
+  left: 5%;
+  right: 5%;
   top: 40px;
   width: 80%;
   display: flex;
@@ -16,7 +17,7 @@ header {
   margin-top: 20px;
   height: 50px;
   margin-bottom: 50px;
-
+  width: 80%;
   max-width: 1000px;
 }
 
